# slvoice

./: CMakeLists.txt  README.txt  base64.h  fixpjlinks.sh  main.cpp  main.h  messaging.cpp  messaging.hpp  parameters.cpp  parameters.hpp  parsing.cpp  parsing.hpp  server.cpp  server.hpp  sip.cpp  sip.hpp  slvoice.xml  state.cpp  state.hpp  voice.cpp  voice.hpp
pjproject/: build.mak  config.status
pjproject/pjlib-util/include/: pjlib-util.h
pjproject/pjlib-util/include/pjlib-util/: base64.h  config.h  crc32.h  dns.h  errno.h  getopt.h  hmac_md5.h  hmac_sha1.h  md5.h  resolver.h  scanner.h  scanner_cis_bitwise.h  scanner_cis_uint.h  sha1.h  srv_resolver.h  string.h  stun_simple.h  types.h  xml.h
pjproject/pjlib-util/src/pjlib-util/: base64.c  crc32.c  dns.c  dns_dump.c  errno.c  getopt.c  hmac_md5.c  hmac_sha1.c  resolver.c  scanner.c  scanner_cis_bitwise.c  scanner_cis_uint.c  srv_resolver.c  string.c  stun_simple_client.c  symbols.c  xml.c
pjproject/pjlib-util/src/pjlib-util-test/: encryption.c  resolver_test.c  stun.c  xml.c
pjproject/pjlib/include/: pjlib.h
pjproject/pjlib/include/pj/: addr_resolv.h  array.h  assert.h  config.h  ctype.h  doxygen.h  errno.h  except.h  fifobuf.h  file_access.h  file_io.h  hash.h  ioqueue.h  ip_helper.h  list.h  list_i.h  lock.h  log.h  os.h  pool.h  pool_alt.h  pool_buf.h  pool_i.h  rand.h  rbtree.h  sock.h  sock_select.h  string.h  string_i.h  types.h  unicode.h
pjproject/pjlib/src/pj/: addr_resolv_linux_kernel.c  addr_resolv_sock.c  addr_resolv_symbian.cpp  array.c  config.c  ctype.c  errno.c  except.c  exception_symbian.cpp  extra-exports.c  fifobuf.c  file_access_unistd.c  file_access_win32.c  file_io_ansi.c  file_io_win32.c  guid.c  guid_simple.c  guid_uuid.c  guid_win32.c  hash.c  ioqueue_common_abs.c  ioqueue_dummy.c  ioqueue_epoll.c  ioqueue_linux_kernel.c  ioqueue_select.c  ioqueue_symbian.cpp  ioqueue_winnt.c  ip_helper_generic.c  ip_helper_win32.c  list.c  lock.c  log.c  log_writer_printk.c  log_writer_stdout.c  log_writer_symbian_console.cpp  os_core_linux_kernel.c  os_core_symbian.cpp  os_core_unix.c  os_core_win32.c  os_error_linux_kernel.c  (+37 more)
pjproject/pjlib/src/pjlib-samples/: except.c  list.c  log.c
pjproject/pjlib/src/pjlib-test/: atomic.c  echo_clt.c  errno.c  exception.c  fifobuf.c  file.c  ioq_perf.c  ioq_tcp.c  ioq_udp.c  ioq_unreg.c  list.c  main.c  main_mod.c  main_rtems.c  main_win32.c  mutex.c  os.c  pool.c  pool_perf.c  rand.c  rbtree.c  rtems_network_config.h  select.c  sleep.c  sock.c  sock_perf.c  string.c  test.c  test.h  thread.c  timer.c  timestamp.c  udp_echo_srv_sync.c  util.c
pjproject/pjmedia/include/: pjmedia-codec.h  pjmedia.h
pjproject/pjmedia/include/pjmedia/: alaw_ulaw.h  bidirectional.h  clock.h  codec.h  conference.h  config.h  config_auto.h  doxygen.h  echo.h  echo_port.h  endpoint.h  errno.h  g711.h  jbuf.h  master_port.h  mem_port.h  null_port.h  plc.h  port.h  resample.h  rtcp.h  rtp.h  sdp.h  sdp_neg.h  session.h  silencedet.h  sound.h  sound_port.h  splitcomb.h  stream.h  tonegen.h  transport.h  transport_ice.h  transport_udp.h  types.h  wav_playlist.h  wav_port.h  wave.h
pjproject/pjmedia/include/pjmedia-codec/: config.h  config_auto.h  config_auto.h.in  gsm.h  ilbc.h  l16.h  speex.h  types.h
pjproject/pjmedia/src/pjmedia/: alaw_ulaw_table.c  bidirectional.c  clock_thread.c  codec.c  conference.c  echo_common.c  echo_internal.h  echo_port.c  echo_speex.c  echo_suppress.c  endpoint.c  errno.c  g711.c  jbuf.c  master_port.c  mem_capture.c  mem_player.c  null_port.c  plc_common.c  port.c  resample_libsamplerate.c  resample_port.c  resample_resample.c  resample_speex.c  rtcp.c  rtp.c  sdp.c  sdp_cmp.c  sdp_neg.c  session.c  silencedet.c  sound_port.c  splitcomb.c  stream.c  tonegen.c  transport_ice.c  transport_udp.c  wav_player.c  wav_playlist.c  wav_writer.c  (+1 more)
pjproject/pjmedia/src/pjmedia-codec/: gsm.c  ilbc.c  l16.c  speex_codec.c
pjproject/pjmedia/src/test/: sdp_neg_test.c  test.h
pjproject/pjnath/include/: pjnath.h
pjproject/pjnath/include/pjnath/: config.h  errno.h  ice_session.h  ice_strans.h  nat_detect.h  stun_auth.h  stun_config.h  stun_msg.h  stun_session.h  stun_transaction.h  types.h
pjproject/pjnath/src/pjnath/: errno.c  ice_session.c  ice_strans.c  nat_detect.c  stun_auth.c  stun_msg.c  stun_msg_dump.c  stun_session.c  stun_transaction.c
pjproject/pjnath/src/pjnath-test/: ice_test.c  stun.c  test.c  test.h
pjproject/pjsip-apps/src/pjsua/: pjsua_app.c
pjproject/pjsip-apps/src/py_pjsua/: py_pjsua.c  py_pjsua.h
pjproject/pjsip-apps/src/samples/: aectest.c  confbench.c  confsample.c  debug.c  footprint.c  invtester.c  level.c  pjsip-perf.c  playfile.c  playsine.c  proxy.h  recfile.c  resampleplay.c  simple_pjsua.c  simpleua.c  siprtp.c  siprtp_report.c  sipstateless.c  stateful_proxy.c  stateless_proxy.c  streamutil.c  tonegen.c
pjproject/pjsip-apps/src/symbian_ua/: main_symbian.cpp  ua.cpp  ua.h
pjproject/pjsip-apps/src/symsndtest/: app_main.cpp  main_symbian.cpp
pjproject/pjsip/include/: pjsip.h  pjsip_auth.h  pjsip_simple.h  pjsip_ua.h
pjproject/pjsip/include/pjsip/: print_util.h  sip_auth.h  sip_auth_aka.h  sip_auth_msg.h  sip_auth_parser.h  sip_autoconf.h  sip_config.h  sip_dialog.h  sip_errno.h  (+18 more)
pjproject/pjsip/include/pjsip-simple/: errno.h  evsub.h  evsub_msg.h  iscomposing.h  pidf.h  presence.h  publish.h  rpid.h  types.h  xpidf.h
pjproject/pjsip/include/pjsip-ua/: sip_100rel.h  sip_inv.h  sip_regc.h  sip_replaces.h  sip_xfer.h
tinyxml/: Makefile
voiceforvw/include/: config.hpp  event.hpp  logger.hpp  main.h  parameters.hpp  parsing.hpp  server.hpp  server_util.hpp  sip.hpp  state.hpp
voiceforvw/src/config/: config.cpp
voiceforvw/src/logger/: logger.cpp
voiceforvw/src/main/: main.cpp
voiceforvw/src/manage/: account_manager.cpp  base_manager.cpp  event_manager.cpp  session_manager.cpp
voiceforvw/src/parsing/: base64.cpp  parameters.cpp  parsing.cpp
voiceforvw/src/server/: server.cpp  server_util.cpp
voiceforvw/src/sip/: sip.cpp
voiceforvw/src/state/: account_state.cpp  connect_state.cpp  session_state.cpp  state.cpp
(+104 files in other folders)
